deleted useless code + fix spacing in code

--- a/html_css/css/main.css
+++ b/html_css/css/main.css
@@ -87,7 +87,7 @@ section h2 {
   margin: 0;
 }
 
-section h2.about {
+section h2.orange {
   color: rgba(255, 110, 0, 1.0);
 }
 
